--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.2+1
+version: 0.1.3+1
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -39,6 +39,9 @@ dependencies:
   flutter_dotenv: ^5.0.2
   photo_view: ^0.14.0
   video_player: ^2.6.1
+  flutter_downloader: ^1.10.2
+  path_provider: ^2.0.14
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.0"
