--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.1.5+1
+version: 0.2.0+1
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -45,6 +45,9 @@ dependencies:
   back_button_interceptor: ^6.0.2
   rich_clipboard: ^1.0.1
   url_launcher: ^6.1.10
+  flutter_secure_storage: ^8.0.0
+  shared_preferences: ^2.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.0"
@@ -72,6 +75,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/app_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
