--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.2.2+1
+version: 0.2.3+1
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^2.1.0
   url_launcher: ^6.1.10
   video_player: ^2.6.1
+  socket_io_client: ^2.0.1
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.0"
