--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.2.7+1
+version: 0.3.0+1
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -51,6 +51,8 @@ dependencies:
   socket_io_client: ^2.0.1
   file_picker: ^5.2.9
   fluttertoast: ^8.2.1
+  path: ^1.8.2
+  page_transition: ^2.0.9
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.0"
