--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.5.6+1
+version: 0.5.7+1
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -53,6 +53,7 @@ dependencies:
   path: ^1.8.2
   page_transition: ^2.0.9
   chewie: ^1.4.0
+  flutter_local_notifications: ^8.2.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.0"
