--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,6 +3,10 @@
 <plist version="1.0">
 <key>NSAppTransportSecurity</key>
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>NSAllowsArbitraryLoads</key>
   <true/>
 	<key>CFBundleDevelopmentRegion</key>
